# Rovers_Task_Solution

./: CMakeLists.txt  Point2D.hpp  README.md  README.txt  Rover.cpp  Rover.hpp  execFile.cpp  input1.txt  input2.txt  output1.txt  output2.txt  task  task.cpp  test.cpp
